--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<a href="http://localhost:3000/CreateKeyPair?passphrase=testpass">Create Encrypted Key Pair</a>
-</br>
-<a href="http://localhost:3000/EncryptTestMessage?passphrase=testpass&message=Test%20Message">Encrypt and decrypt a test message</a>
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="UTF-8">
+      <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+      <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+      <title>Vault</title>
+      <script src="./renderer.js"></script>
+   </head>
+   <body>
+      <button id="CreateKeysBtn">Create Encrypted Key Pair</button>
+      <button id="EncryptionTestBtn">Encrypt and decrypt a test message</button>
+   </body>
+</html>
