added in bootstrap

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
       <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
       <title>Vault</title>
+      <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+      <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
       <script src="./renderer.js"></script>
+      <script src="./assets/js/bootstrap.min.js"></script>
    </head>
    <body>
       <button id="CreateKeysBtn">Create Encrypted Key Pair</button>
