Makin bacon pancakes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
       <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
       <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
       <title>Vault</title>
-      <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+      <link href="./assets/css/all.css" rel="stylesheet">
       <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
       <script src="./renderer.js"></script>
       <script src="./assets/js/bootstrap.min.js"></script>
    </head>
    <body>
-      <button id="CreateKeysBtn">Create Encrypted Key Pair</button>
-      <button id="EncryptionTestBtn">Encrypt and decrypt a test message</button>
+      <button class="fas fa-key" id="CreateKeysBtn"> Create Encrypted Key Pair</button>
+      <button class="fas fa-lock" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
+
    </body>
 </html>
