--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       <script src="./assets/js/bootstrap.min.js"></script>
    </head>
    <body>
-      <button class="fas fa-key" id="CreateKeysBtn"> Create Encrypted Key Pair</button>
-      <button class="fas fa-lock" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
+      <button class="btn btn-primary" id="CreateKeysBtn"> Create Encrypted Key Pair</button>
+  		</br>
+  		</br>
+      <button class="btn btn-success" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
 
    </body>
 </html>
