select key path

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
    </head>
    <body>
       <button class="btn btn-primary" id="CreateKeysBtn"> Create Encrypted Key Pair</button>
-  		</br>
-  		</br>
+
+      <button class="btn btn-secondary" id="select-directory"> Select Key Directory</button>
+
       <button class="btn btn-success" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
 
    </body>
