--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="./assets/js/bootstrap.min.js"></script>
    </head>
    <body>
-      <button class="btn btn-primary" id="CreateKeysBtn"> Create Encrypted Key Pair</button>
+      <button class="btn btn-primary" id="CreateKeysBtn"> Create Private Key File</button>
 
       <button class="btn btn-secondary" id="select-directory"> Select Key Directory</button>
 
