Adding in filemanager functions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <button class="btn btn-primary" id="CreateKeysBtn"> Create Private Key File</button>
     </br>
     <button class="btn btn-success" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
+    </br>
+    <button class="btn btn-dark" id="readJson"> Read Json</button>
+        </br>
+    <button class="btn btn-dark" id="testJson"> Test Json</button>
 </body>
 
 </html>
