--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     </br>
     <button class="btn btn-success" id="EncryptionTestBtn"> Encrypt and decrypt a test message</button>
     </br>
-    <button class="btn btn-dark" id="readJson"> Read Json</button>
-        </br>
-    <button class="btn btn-dark" id="testJson"> Test Json</button>
+    <button class="btn btn-dark" id="ReadPasswordFile"> Read Json</button>
+    </br>
+    <button class="btn btn-dark" id="CreateEntry"> Create Encrypted Entry</button>
+    </br>
+    <button class="btn btn-dark" id="FindEntry"> Find Decrypted Entry</button>
 </body>
 
 </html>
