--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <div id="main-div"></div>
+    
+</body>
+
+</html>
+
+
+
+<!--
     <div>
         <input type="password" id="Passphrase">
         <button class="btn btn-warning" id="PassphraseSubmitBtn"> Set Passphrase
@@ -30,6 +39,7 @@
     <button class="btn btn-dark" id="CreateEntry"> Create Encrypted Entry</button>
     </br>
     <button class="btn btn-dark" id="FindEntry"> Find Decrypted Entry</button>
-</body>
-
-</html>
+    </br>
+    </br>
+    <button class="btn btn-warning" id="test"> test</button>
+   -->
