Adding in new pages and back buttons

--- a/newSetupPage.html
+++ b/newSetupPage.html
@@ -1,1 +1,10 @@
-new Setup
+<button class="btn btn-primary" id="CreateKeysBtn"> Create Private Key File</button>
+</br>
+</br>
+<button class="btn btn-secondary" id="CreateVaultBtn"> Create Vault File</button>
+</br>
+</br>
+<button class="btn btn-secondary" id="SetMasterPassword"> Set Master Password</button>
+</br>
+</br>
+<button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>   
