--- a/setupPage.html
+++ b/setupPage.html
@@ -4,9 +4,7 @@
 <button class="btn btn-secondary" id="select-directory-vault"> Select Vault Directory</button>
 </br>
 </br>
-<div>
-    <input type="password" id="Passphrase">
-    <button class="btn btn-warning" id="PassphraseSubmitBtn"> Set Passphrase
-        <i class="fas fa-key"></i>
-    </button>
-</div>
+<button class="btn btn-secondary" id="SetMasterPassword"> Set Master Password</button>
+</br>
+</br>
+<button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>   
