--- a/masterPasswordPage.html
+++ b/masterPasswordPage.html
@@ -1,6 +1,10 @@
-<div>
-    <input type="password" id="Passphrase">
-    <button class="btn btn-warning" id="PassphraseSubmitBtn"> Set Passphrase
-        <i class="fas fa-key"></i>
-    </button>
-</div>
+<h1 id="Title"></h1>
+</br>
+</br>
+<input type="password" id="Passphrase">
+</br>
+</br>
+<button class="btn btn-warning" id="PassphraseSubmitBtn"> Save </button>
+</br>
+</br>
+<button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>
