--- a/newSetupPage.html
+++ b/newSetupPage.html
@@ -1,10 +1,14 @@
+<p>Step 1.</p>
 <button class="btn btn-primary" id="CreateKeysBtn"> Create Private Key File</button>
 </br>
 </br>
+<p>Step 2.</p>
 <button class="btn btn-secondary" id="CreateVaultBtn"> Create Vault File</button>
 </br>
 </br>
+<p>Step 3.</p>
 <button class="btn btn-secondary" id="SetMasterPassword"> Set Master Password</button>
+</br>
 </br>
 </br>
 <button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>   
