--- a/setupPage.html
+++ b/setupPage.html
@@ -1,10 +1,14 @@
+<p>Step 1.</p>
 <button class="btn btn-secondary" id="select-directory-key"> Select Key Directory</button>
 </br>
 </br>
+<p>Step 2.</p>
 <button class="btn btn-secondary" id="select-directory-vault"> Select Vault Directory</button>
 </br>
 </br>
+<p>Step 3.</p>
 <button class="btn btn-secondary" id="SetMasterPassword"> Set Master Password</button>
 </br>
 </br>
-<button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>   
+</br>
+<button class="btn btn-danger" id="Back"> <i class="fas fa-arrow-left"></i> Back </button>
